--- a/Course 1/Practice Lab_Linear Regression.ipynb
+++ b/Course 1/Practice Lab_Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -104,25 +104,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def compute_cost(x,y,w,b):\n",
-    "    m=x.shape[0] # number of training examples because x.shape=(number of rows, number of columns), so x.shape[0]=number of rows\n",
-    "    total_cost=0\n",
-    "    cost=0\n",
-    "    for i in range(m):\n",
-    "        f_wb=w*x[i]+b\n",
-    "        cost+=(f_wb-y[i])**2\n",
-    "    total_cost=cost/(2*m)\n",
-    "    return total_cost"
+    "Define cost funcion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_cost(x,y,w,b): #define cost function\n",
+    "    m=x.shape[0] # number of training examples because x.shape=(number of rows, number of columns), so x.shape[0]=number of rows\n",
+    "    total_cost=0\n",
+    "    cost=0\n",
+    "    for i in range(m):\n",
+    "        f_wb=w*x[i]+b #define the linear regression function\n",
+    "        cost+=(f_wb-y[i])**2 #define the cost\n",
+    "    total_cost=cost/(2*m) #cost function\n",
+    "    return total_cost"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute cost with some initial values for w,b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -144,20 +160,29 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define gradient function"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_gradient(x,y,w,b):\n",
-    "    m=x.shape[0]\n",
+    "def compute_gradient(x,y,w,b): #define gradient function\n",
+    "    m=x.shape[0] # number of training examples because x.shape=(number of rows, number of columns), so x.shape[0]=number of rows\n",
     "    dj_dw=0\n",
     "    dj_db=0\n",
     "    for i in range(m):\n",
-    "        dj_db+=f_wb-y[i]\n",
-    "        dj_dw+=(f_wb-y[i])*x[i]\n",
-    "    dj_dw/=m\n",
-    "    dj_db/=m\n",
+    "        f_wb=w*x[i]+b #define the linear regression function\n",
+    "        dj_db+=f_wb-y[i] #calculates the partial derivative of the cost function with respect to b for the i-th training example.\n",
+    "        dj_dw+=(f_wb-y[i])*x[i] #calculates the partial derivative of the cost function with respect to w for the i-th training example.\n",
+    "    dj_dw/=m #divides the sum of the partial derivative of the cost function with respect to w by m to get the average partial derivative.\n",
+    "    dj_db/=m #divides the sum of the partial derivative of the cost function with respect to b by m to get the average partial derivative.\n",
     "    return dj_dw,dj_db\n",
     "\n",
     "\n",
@@ -166,14 +191,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient at initial w, b (zeros): -65.32884974555672 -5.83913505154639\n"
+     ]
+    }
+   ],
    "source": [
     "initial_w=0\n",
     "initial_b=0\n",
     "\n",
-    "tmp_dj_dw,tmp_dj_db=compute_gradient(x_train,y_train,initial_w,initial_b)\n"
+    "tmp_dj_dw,tmp_dj_db=compute_gradient(x_train,y_train,initial_w,initial_b)\n",
+    "\n",
+    "print(\"Gradient at initial w, b (zeros):\", tmp_dj_dw,tmp_dj_db)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient at test w,b: -47.41610118114435 -4.007175051546391\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_w=0.2\n",
+    "test_b=0.2\n",
+    "\n",
+    "tmp_dj_dw,tmp_dj_db=compute_gradient(x_train,y_train,test_w,test_b)\n",
+    "\n",
+    "print(\"Gradient at test w,b:\",tmp_dj_dw,tmp_dj_db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradient_descent(x,y,w_in,b_in,cost_function,gradient_function,alpha,num_iters):\n",
+    "    m=len(x)#number of training examples\n",
+    "\n",
+    "    J_history=[]\n",
+    "    w_history=[]\n",
+    "    w=copy.deepcopy(w_in)\n",
+    "    b=b_in\n",
+    "\n",
+    "    for i in range(num_iters):\n",
+    "        dj_dw,dj_db=gradient_function(x,y,w,b)\n",
+    "\n",
+    "        w=w-alpha*dj_dw\n",
+    "        b=b-alpha*dj_db\n",
+    "\n",
+    "        if i<100000:\n",
+    "            cost=cost_function(x,y,w,b)\n",
+    "            J_history.append(cost)\n",
+    "        if i%math.ceil(num_iters/10)==0:\n",
+    "            w_history.append(w)\n",
+    "            print(f\"Iteration {i:4}: Cost {float(J_history[-1]):8.2f}\")\n",
+    "    return w,b,J_history,w_history\n"
    ]
   }
  ],
