--- a/Course 1/Practice Lab_Logistic Regression.ipynb
+++ b/Course 1/Practice Lab_Logistic Regression.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. IMPORT PACKAGES"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +23,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. LOGISTIC REGRESSION"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LOADING DATA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -92,6 +116,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "VIZUALIZE DATA"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Scatter plot function for classification  \n",
     "x[positive, 0] selects the rows in x where y=\"positive\" is \"True\" and takes the first column (0) of those rows  \n",
     "x[positive, 1] selects the rows in x where y=\"positive\" is \"True\" and takes the second column (0) of those rows\n"
@@ -99,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +173,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "SIGMOID FUNCTION\n",
+    "\n",
     "For logistic regression, the model is represented as $f_{w,b}(x) = g(w.x + b)$\n",
     "    \n",
     "To define the sigmoid function: $g(z) = \\frac{1}{1-e^{-z}}$\n"
@@ -148,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,25 +196,202 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define cost funcion for logistic regression"
+    "COST FUNCTION FOR LOGISTIC REGRESSION  \n",
+    "\n",
+    "\n",
+    "Define cost funcion for logistic regression as $J(w,b) = \\frac{1}{m}\\sum \\limits _{i=0} ^{m-1} [loss(f_{w,b}(x^{(i)}),y^{(i)})]$  \n",
+    "  \n",
+    "the cost for a single data poin is:  $loss(f_{w,b}(x^{(i)}),y^{(i)})=(-y^{(i)}log(f_{w,b}(x^{(i)}))-(1-y^{(i)})log(1-f_{w,b}(x^{(i)}))$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_cost(x,y,w,b,lambda_=1):\n",
-    "    m,n=x.shape\n",
+    "    m,n=x.shape #m is the number of rows and n is the number of columns\n",
     "    cost=0\n",
     "    for i in range(m):\n",
-    "        z=np.dot(x[i]*w)+b\n",
+    "        z=np.dot(x[i],w)+b #np.dot() is a NumPy function used to perform matrix multiplication. In this case, x[i] is a row vector of features for the i-th example, w is a column vector of weights\n",
     "        f_wb=sigmoid(z)\n",
     "        cost+=-y[i]*np.log(f_wb)-(1-y[i])*np.log(1-f_wb)\n",
     "    total_cost=cost/m\n",
     "    \n",
     "    return total_cost\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cost at initial w(zeros) is: 0.693\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Compute and display the cost with w initialized to zeros\n",
+    "m,n=x_train.shape\n",
+    "\n",
+    "initial_w=np.zeros(n) #n=2 and corresponds to the number of columns(features) \n",
+    "initial_b=0.\n",
+    "cost=compute_cost(x_train,y_train,initial_w,initial_b)\n",
+    "print(\"The cost at initial w(zeros) is: %.3f\" %(cost))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "GRADIENT FOR LOGISTIC REGRESSION  \n",
+    "\n",
+    "the gradient descent algorithm is: repeat until convergence: for j: =0..n-1  \n",
+    "  \n",
+    "$b: =b-\\alpha \\frac{\\partial J(w,b)}{\\partial b}$  \n",
+    "  \n",
+    "  \n",
+    "$w_j: =w_j-\\alpha \\frac{\\partial J(w,b)}{\\partial w_{j}}$  \n",
+    "  \n",
+    "  \n",
+    "\n",
+    "recall that:  \n",
+    "  \n",
+    "\n",
+    "$\\frac{\\partial J(w,b)}{\\partial b}= \\frac{1}{m} \\sum \\limits _{i=0} ^{m-1} (f_{w,b}(x^{(i)})-y^{(i)})$  \n",
+    "  \n",
+    "\n",
+    "$\\frac{\\partial J(w,b)}{\\partial w_{j}}= \\frac{1}{m} \\sum \\limits _{i=0} ^{m-1} (f_{w,b}(x^{(i)})-y^{(i)})x_{j}^{(i)})$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 264,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_gradient(x,y,w,b,lambda_=None):\n",
+    "    m,n=x.shape #m is the number of rows and n is the number of columns\n",
+    "    dj_dw=np.zeros(w.shape) #dj_dw will accumulate the gradient values for each sample, it is initialized as an array of zeros with the same shape as w\n",
+    "    dj_db=0. #dj_dw and dj_db are initialized with zeros because they will be updated inside a loop.\n",
+    "\n",
+    "    for i in range(m):\n",
+    "        f_wb_i=sigmoid(np.dot(x[i],w)+b)\n",
+    "        err_i=f_wb_i-y[i]\n",
+    "        for j in range(n):\n",
+    "            dj_dw[j]+=+err_i*x[i,j]\n",
+    "        dj_db+=err_i\n",
+    "    dj_dw/=m\n",
+    "    dj_db/=m\n",
+    "\n",
+    "    return dj_db,dj_dw\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dj_db at initial w (zeros) is: -0.1\n",
+      "dj_dw at initial w (zeros) is: [-12.00921659 -11.26284221]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Compute and display gradient with w initialized to zeros\n",
+    "\n",
+    "initial_w=np.zeros(n)\n",
+    "initial_b=0.\n",
+    "\n",
+    "dj_db,dj_dw=compute_gradient(x_train,y_train,initial_w,initial_b)\n",
+    "print(f\"dj_db at initial w (zeros) is: {dj_db}\")\n",
+    "print(f\"dj_dw at initial w (zeros) is: {dj_dw}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LEARNING PARAMETERS USING GRADIENT DESCENT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gradient_descent(x,y,w_in,b_in,cost_function,gradient_function,alpha,num_iterations,lambda_):\n",
+    "    m=len(x) #number of training examples\n",
+    "    \n",
+    "    #An array to store cost J and w's at each iteration \n",
+    "    J_history=[]\n",
+    "    w_history=[]\n",
+    "    \n",
+    "    for i in range(num_iterations):\n",
+    "        dj_db,dj_dw=gradient_function(x,y,w_in,b_in,lambda_)  #Calculate the gradient and update the parameters\n",
+    "        w_in=w_in-alpha*dj_dw # Update Parameters using w, b, alpha and gradient\n",
+    "        b_in=b_in-alpha*dj_db\n",
+    "        \n",
+    "        if i<100000: #In practice, the value 100000 can be adjusted depending on the size of the dataset and the computational resources available. If the dataset is small, a smaller value can be used, while a larger value can be used for larger datasets. It is also possible to remove this condition altogether and store the cost at every iteration if memory is not a concern.\n",
+    "            cost=cost_function(x,y,w_in,b_in,lambda_)\n",
+    "            J_history.append(cost) #is appending the current value of the cost function to the end of the list J_history. This list is used to keep track of the cost function values at each iteration of the gradient descent algorithm. Later, this list can be used to plot the change in cost function with respect to the number of iterations.\n",
+    "        if i%math.ceil(num_iterations/10)==0 or i==(num_iterations-1): #checks if the current iteration number i is a multiple of num_iters/10. This condition is true for every 10% of the total iterations of the iterations or the last iteration      \n",
+    "            w_history.append(w_in)\n",
+    "            print(f\"Iteration {i:4} Cost {float(J_history[-1]):8.2f}\") #prints the iteration number and the current cost of the model, which is the last element in the J_history list. The {i:4} specifies that the variable i should be formatted with a width of 4 characters and :8.2f that the cost should be formatted as a float with a width of 8 characters and 2 decimal places.\n",
+    "\n",
+    "    return w_in,b_in,J_history,w_history\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration    0 Cost     0.68\n",
+      "Iteration 1000 Cost     0.31\n",
+      "Iteration 2000 Cost     0.30\n",
+      "Iteration 3000 Cost     0.30\n",
+      "Iteration 4000 Cost     0.30\n",
+      "Iteration 5000 Cost     0.30\n",
+      "Iteration 6000 Cost     0.30\n",
+      "Iteration 7000 Cost     0.30\n",
+      "Iteration 8000 Cost     0.30\n",
+      "Iteration 9000 Cost     0.30\n",
+      "Iteration 9999 Cost     0.30\n",
+      "w,b found by gradient descent: [0.07125399 0.06482932] -8.188679359279176\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(1) #By setting the seed, you are fixing the sequence of random numbers that will be generated, allowing you to reproduce the same results each time the code is run. It's useful to debug and test the code and to ensure that the random initialization of your model's parameters is consistent across multiple runs.\n",
+    "initial_w=0.01 * (np.random.rand(2)) # initialize the weight parameters with some random values. This is done to avoid the problem of symmetrical weights, which can result in neurons learning the same features during training, leading to poor performance of the model. Initializing the weights with random values breaks the symmetry and allows neurons to learn different features during training.\n",
+    "initial_b=-8 # is also set to a non-zero value to break the symmetry and improve performance.\n",
+    "\n",
+    "iterations=10000\n",
+    "alpha=0.001\n",
+    "\n",
+    "w,b,J_history,_=gradient_descent(x_train,y_train,initial_w,initial_b,compute_cost,compute_gradient,alpha,iterations,0)\n",
+    "print(\"w,b found by gradient descent:\",w,b)"
    ]
   }
  ],
