--- a/Course 1/Practice Lab_Linear Regression.ipynb
+++ b/Course 1/Practice Lab_Linear Regression.ipynb
@@ -175,7 +175,7 @@
    "source": [
     "def compute_gradient(x,y,w,b): #define gradient function\n",
     "    m=x.shape[0] # number of training examples because x.shape=(number of rows, number of columns), so x.shape[0]=number of rows\n",
-    "    dj_dw=0\n",
+    "    dj_dw=0 #dj_dw and dj_db are initialized with zeros because they will be updated inside a loop \n",
     "    dj_db=0\n",
     "    for i in range(m):\n",
     "        f_wb=w*x[i]+b #define the linear regression function\n",
