--- a/Course 1/Practice Lab_Logistic Regression using Scikit-Learn.ipynb
+++ b/Course 1/Practice Lab_Logistic Regression using Scikit-Learn.ipynb
@@ -82,7 +82,8 @@
    "source": [
     "#Plotting the data points\n",
     "plt.scatter(X_train[y_train==0]['X1'],X_train[y_train==0]['X2'],label='Class 0',marker='o')#This line plots the training data points corresponding to class 0. \n",
-    "plt.scatter(X_train[y_train==1]['X1'],X_train[y_train==1]['X2'],label='Class 1',marker='x')#This line plots the training data points corresponding to class 1. "
+    "plt.scatter(X_train[y_train==1]['X1'],X_train[y_train==1]['X2'],label='Class 1',marker='x')#This line plots the training data points corresponding to class 1. \n",
+    "plt.show()"
    ]
   },
   {
